--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "clarifai-nodejs-grpc": "^9.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
