--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "server.js",
     "debug": "node --inspect server.js"
   },
   "author": "",
@@ -16,7 +16,9 @@
     "body-parser": "^1.20.2",
     "clarifai-nodejs-grpc": "^9.7.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
