--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "server.js",
+    "start": "nodemon index.js",
     "debug": "node --inspect server.js"
   },
   "author": "",
