--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "backend-face-recognition-brain",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "backend web API for the smart-brain-app",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
     "debug": "node --inspect server.js"
   },
-  "author": "",
+  "author": "Alesia Kolbik",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=14"
   }
 }
