--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "debug": "node --inspect server.js"
   },
   "author": "Alesia Kolbik",
@@ -16,7 +16,8 @@
     "body-parser": "^1.20.2",
     "clarifai-nodejs-grpc": "^9.7.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14"
